--- a/Home/Home.css
+++ b/Home/Home.css
@@ -1,3 +1,34 @@
 #Page-Content {
     padding: 10px;
 }
+
+#row-1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+
+    padding: 10px;
+
+    font-size: large;
+}
+
+#Home_Image_1 {
+    margin-left: 200px;
+    margin-right: 100px;
+    width: 600px;
+}
+
+#row-1 p {
+    background-color: rgb(255, 255, 255);
+
+    border-style: solid;
+    border-color: rgb(248, 248, 248);
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#Happy_Valley_Emphasized {
+    font-style: italic;
+    font-size: larger;
+}
