--- a/assets/Header/Header.css
+++ b/assets/Header/Header.css
@@ -3,13 +3,25 @@
     --light_blue: rgb(217, 249, 255);
     --blue: rgb(118, 178, 255);
     --dark_blue:rgb(33, 93, 172);
-  }
+}
+
+@font-face {
+    font-family: "playball";
+    src: url(/HappyValleyKennels/assets/fonts/Playball-q6o1.woff) format("woff");    
+}
+
+@font-face {
+    font-family: "Y14";
+    src: url(/HappyValleyKennels/assets/fonts//Y1452018-1Gjd0.woff) format("woff");
+}
 
 body{
     margin: 0;
     padding: 0;
 
     background-color: rgb(243, 250, 252);
+
+    font-family: Y14;
 }
 
 /* Style the page header and its content */
@@ -18,6 +30,8 @@ body{
     padding: 20px;
     display: flex;
     justify-content: center;
+
+    font-family: playball;
 }
 
 #Page_Header a{
@@ -65,6 +79,7 @@ body{
 
     background-color: rgb(97, 164, 252);
 
+    font-family: Y14;
     font-size: 30px;
     color: rgb(54, 54, 54);
     text-decoration: none;
