Font size adjustments

--- a/assets/Header/Header.css
+++ b/assets/Header/Header.css
@@ -22,6 +22,7 @@ body{
     background-color: rgb(243, 250, 252);
 
     font-family: Y14;
+    font-size: 40%;
 }
 
 /* Style the page header and its content */
