More font adjustments

--- a/assets/Header/Header.css
+++ b/assets/Header/Header.css
@@ -22,7 +22,7 @@ body{
     background-color: rgb(243, 250, 252);
 
     font-family: Y14;
-    font-size: 40%;
+    font-size: 20px;
 }
 
 /* Style the page header and its content */
