--- a/assets/Header/Header.css
+++ b/assets/Header/Header.css
@@ -123,7 +123,14 @@ body{
 #dropdown_items {
     display: none;
 
+    border-style: solid;
+    border-color: var(--dark_blue);
+    border-radius: 5px;
+
     background-color: var(--white_blue);
+
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #dropdown_items a {
