--- a/assets/Header/Header.css
+++ b/assets/Header/Header.css
@@ -113,7 +113,7 @@ body{
 #dropdown_container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
 
     position: fixed;
     top: 2%;
@@ -146,4 +146,10 @@ body{
 #Submit_Container {
     display: flex;
     justify-content: center;
+}
+
+form {
+    display: flex !important;
+    justify-content: center;
+    flex-direction: column;
 }
