--- a/assets/Header/Header.css
+++ b/assets/Header/Header.css
@@ -158,3 +158,27 @@ form {
     justify-content: center;
     flex-direction: column;
 }
+
+#page_credit {
+    position: fixed;
+    left: 0;
+    top: 0;
+
+    margin: 0;
+    width: fit-content;
+
+    background-color: rgb(97, 164, 252);
+
+    font-family: Y14;
+    font-size: 30px;
+    color: rgb(54, 54, 54);
+    text-decoration: none;
+
+    padding-top: 8px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    border-style: none;
+    border-radius: 4px;
+}
