--- a/Users/users.css
+++ b/Users/users.css
@@ -1,3 +1,23 @@
 .hide {
     display: none;
 }
+
+#Page_Content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#options_menu, #add_menu {
+    background-color: rgb(196, 196, 214);
+    min-width: 50%;
+    padding: 5%;
+}
+
+#options_menu button{
+    width: 30%;
+}
+
+form{
+    text-align: left;
+}
