--- a/Users/users.css
+++ b/Users/users.css
@@ -31,7 +31,7 @@
     margin: 1%;
 }
 
-#options_menu button{
+.blue_button {
     margin: 1%;
     width: 30%;
 
@@ -45,6 +45,47 @@
     border-style: none;
 }
 
+.back_button_container {
+    display: flex;
+    width: 100%;
+    justify-content: left;
+}
+
+.input_error {
+    border-color: red;
+}
+
+.error_text {
+    color: red;
+}
+
+#submit_button {
+    width: 50%;
+}
+
 form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#form_content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input_container {
+    width: 50%;
     text-align: left;
+}
+
+.hide {
+    display: none;
+}
+
+#first_name, #last_name{
+    width: 100%;
 }
