--- a/Contact/style.css
+++ b/Contact/style.css
@@ -29,6 +29,25 @@ body {
 	color: #fff
 }
 
+.contact-right a {
+	background-color: white;
+	
+	text-decoration: none;
+	color: #1c00b5;
+
+	padding: 3%;
+	border-radius: 10px;
+}
+
+.contact-right a:hover {
+	background-color: rgb(185, 185, 185);
+	font-size: 18px;
+}
+
+#contact-separator {
+	color: white;
+}
+
 h1 {
 	margin-bottom: 10px;
 }
