--- a/Scheduling/Check Out/checkout_style.css
+++ b/Scheduling/Check Out/checkout_style.css
@@ -34,8 +34,8 @@
   border-radius: 3px;
 }
 
-input[type="text"] {
-  width: 100%;
+.container input[type="text"] {
+  width: 96%;
   margin-bottom: 20px;
   padding: 12px;
   border: 1px solid #ccc;
