--- a/Scheduling/formstyle.css
+++ b/Scheduling/formstyle.css
@@ -1,9 +1,11 @@
 body {
-  background-color: pink;
+  font-family: Calibri, Helvetica, sans-serif;
 }
+
+
 .container {
   padding: 50px;
-  background-color: lightblue;
+  background-color: rgb(2, 174, 197);
 }
 
 input[type="text"],
@@ -16,18 +18,19 @@ textarea {
   border: none;
   background: #f1f1f1;
 }
+
 input[type="text"]:focus,
 input[type="password"]:focus {
   background-color: orange;
   outline: none;
 }
-.Entry_Area {
-  padding: 10px 0;
-}
-.black_line {
+
+form hr {
+  border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
-.registerbtn {
+
+.register {
   background: #1c00b5;
   color: white;
   padding: 16px 20px;
@@ -39,6 +42,7 @@ input[type="password"]:focus {
   opacity: 0.9;
   border-radius: 30px;
 }
-.registerbtn:hover {
+
+.register:hover {
   opacity: 1;
 }
