--- a/Users/users.css
+++ b/Users/users.css
@@ -16,12 +16,12 @@
     align-items: center;
 }
 
-#options_menu, #add_menu {
+#options_menu, #add_menu, #edit_menu{
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    background-color: rgb(196, 196, 214);
+    background-color: var(--blue);
     min-width: 50%;
     
     padding: .05% 3% 5%;
@@ -59,7 +59,7 @@
     color: red;
 }
 
-#submit_button {
+.submit_button {
     width: 50%;
 }
 
@@ -86,6 +86,6 @@ form{
     display: none;
 }
 
-#first_name, #last_name{
+#first_name, #last_name, #employee_id{
     width: 100%;
 }
