--- a/Reports/reports.css
+++ b/Reports/reports.css
@@ -1,47 +1,46 @@
-#Page_Content section{
+#Page_Content section {
     display: flex;
     justify-content: center;
 }
 
-caption
-{
-    font-weight:bold;
-    text-align:center;
+caption {
+    font-weight: bold;
+    text-align: center;
     font-size: 145%;
 }
-table
-{
+
+table {
     width: 92%;
     border: 1px solid black;
 }
-th
-{
+
+th {
     color: blue;
-     border: 1px solid black;
-}
-td
-{
-    padding: 5px;
-     border: 1px solid black;
-}
-.blue
-{
-    background-color: lightblue;
-}
-.middle
-{
-    vertical-align: middle;
-}
-.left
-{
-    text-align: left;
-}
-.center
-{
-    text-align: center;
-}
-.right
-{
-    text-align: right;
+    border: 1px solid black;
 }
 
+td {
+    text-align: center;
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.blue {
+    background-color: lightblue;
+}
+
+.middle {
+    vertical-align: middle;
+}
+
+.left {
+    text-align: left;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
