--- a/Home/Home.css
+++ b/Home/Home.css
@@ -1,7 +1,7 @@
 #row-1 {
     display: flex;
-    flex-direction: row;
-    justify-content: left;
+    flex-direction: column;
+    align-items: center;
 
     padding: 10px;
 
@@ -9,12 +9,14 @@
 }
 
 #Home_Image_1 {
-    margin-left: 10%;
-    margin-right: 100px;
-    width: 100%;
+    width: 80%;
 }
 
 #Intro_Text_Box {
+    display: flex;
+    flex-direction: row;
+    font-size: larger;
+
     background-color: rgb(255, 255, 255);
 
     border-style: solid;
@@ -23,6 +25,12 @@
     padding: 20px;
 
     text-align: left;
+}
+
+#Image_Box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #Happy_Valley_Emphasized {
